Upgrading build-helper-maven-plugin