@@ -19,7 +19,6 @@
 package org.apache.syncope.sra;
 
 import java.time.ZonedDateTime;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
 import java.util.function.Consumer;
@@ -379,7 +378,7 @@ public class RouteProvider {
             case HOST:
                 String[] hostArgs = gwpredicate.getArgs().split(",");
                 predicate = ctx.getBean(HostRoutePredicateFactory.class).
-                        applyAsync(c -> c.setPatterns(Arrays.asList(hostArgs)));
+                        applyAsync(c -> c.setPatterns(List.of(hostArgs)));
                 break;
 
             case METHOD:
@@ -392,7 +391,7 @@ public class RouteProvider {
             case PATH:
                 String[] pathArgs = gwpredicate.getArgs().split(",");
                 predicate = ctx.getBean(PathRoutePredicateFactory.class).
-                        applyAsync(c -> c.setPatterns(Arrays.asList(pathArgs)));
+                        applyAsync(c -> c.setPatterns(List.of(pathArgs)));
                 break;
 
             case QUERY:
@@ -408,7 +407,7 @@ public class RouteProvider {
             case REMOTE_ADDR:
                 String[] remoteAddrArgs = gwpredicate.getArgs().split(",");
                 predicate = ctx.getBean(RemoteAddrRoutePredicateFactory.class).
-                        applyAsync(c -> c.setSources(Arrays.asList(remoteAddrArgs)));
+                        applyAsync(c -> c.setSources(List.of(remoteAddrArgs)));
                 break;
 
             case CUSTOM:
